fix overflow

--- a/h5game_backend/static/css/game.css
+++ b/h5game_backend/static/css/game.css
@@ -70,8 +70,8 @@
     text-align: center;
     width: 95%;
     height: 32px;
-    line-height: 34px
-    overflow:hidden;
+    line-height: 34px;
+    overflow: hidden;
 }
 .tips{
     font-size: 10px;
